src/objects/silverpop__Email_Link__c.object
<CustomObject>
    <fields>
        <fullName>Clicked__c</fullName>
        <formula>IF( 
ISBLANK(   silverpop__Last_Clicked__c   ), 
0, 
1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>IF( 
ISBLANK(      silverpop__Mailing_Link_id__c      ), 
0, 
1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Clicked__c</fullName>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Link_Name__c</fullName>
        <label>Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Mailing_Link_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Mailing_Link_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Email_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Silverpop Email Activity</label>
        <referenceTo>silverpop__Silverpop_Email_Activity__c</referenceTo>
        <relationshipLabel>Email Links</relationshipLabel>
        <relationshipName>Email_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>silverpop__URL__c</fullName>
        <label>URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Email Link</label>
    <nameField>
        <label>Email Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>